--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello
+<html>
+  <head>
+   <title>Fun Facts about Cats</title>
+    <body>
+    <img>
+      Cats hate the water because their fur does not insulate well when it’s wet. The Turkish Van, however, is one cat that likes swimming. Bred in central Asia, its coat has a unique texture that makes it water resistant. 
+      <body>
+    </head>
+    </html>
