--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
-  <head>
-   <title>Fun Facts about Cats</title>
+  <head></head>
     <body>
+      <title>Fun Facts about Cats</title>
     <img src="Unknown.jpeg">
       Cats hate the water because their fur does not insulate well when it’s wet. The Turkish Van, however, is one cat that likes swimming. Bred in central Asia, its coat has a unique texture that makes it water resistant. 
       </body>
-    </head>
     </html>
